--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 body{
-    background-color: blueviolet;
+    background-color: bisque;
     text-align: center;
+}
 
-}
-h1{
-    color:darkblue
-
-}
-p{
-    color:black
-}
+ #imagem1 {
+    width: 200px;
+ }
