--- a/index2.html/style2.css
+++ b/index2.html/style2.css
@@ -14,3 +14,12 @@
     border: 3px goldenrod;
     border-radius: 10px;
 }
+
+.caixa{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    background-color: blueviolet;
+    color: black;
+}
